[package]
description = "Transport agnostic rust implementation of JSON-RPC 2.0 Specification."
homepage = "https://github.com/susytech/susy-jsonrpc"
repository = "https://github.com/susytech/susy-jsonrpc"
license = "MIT"
name = "susy-jsonrpc-core"
version = "8.0.0"
authors = ["debris <marek.kotewicz@gmail.com>"]
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]
documentation = "https://susytech.github.io/jsonrpc/susy_jsonrpc_core/index.html"

categories = [
	"asynchronous",
	"network-programming",
	"web-programming::http-client",
	"web-programming::http-server",
	"web-programming::websocket",
]

[dependencies]
log = "0.3"
futures = "0.1.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[badges]
travis-ci = { repository = "susytech/susy-jsonrpc", branch = "master"}
