[package]
authors = ["Susytech <admin@superstring.ch>", "Susytech <admin@susy.io>"]
description = "Transport agnostic rust implementation of JSON-RPC 2.0 Specification."
documentation = "https://docs.rs/susy-jsonrpc-core/"
edition = "2018"
homepage = "https://github.com/susytech/susy-jsonrpc"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]
license = "MIT"
name = "susy-jsonrpc-core"
repository = "https://github.com/susytech/susy-jsonrpc"
version = "11.0.0"

categories = [
	"asynchronous",
	"network-programming",
	"web-programming::http-client",
	"web-programming::http-server",
	"web-programming::websocket",
]

[dependencies]
log = {version="0.4", registry="susytech"}
futures = {version="~0.1.6", registry="susytech"}
serde = {version="1.0", registry="susytech"}
serde_json = {version="1.0", registry="susytech"}
serde_derive = {version="1.0", registry="susytech"}

[badges]
travis-ci = { repository = "susytech/susy-jsonrpc", branch = "master"}
