[package]
authors = ["Susy Technologies <admin@susy.io>"]
description = "Rust http server using JSONRPC 2.0."
documentation = "https://docs.rs/susy-jsonrpc-http-server/"
edition = "2018"
homepage = "https://github.com/susytech/susy-jsonrpc"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "server"]
license = "MIT"
name = "susy-jsonrpc-http-server"
repository = "https://github.com/susytech/susy-jsonrpc"
version = "10.0.1"

[dependencies]
hyper = "0.12"
susy-jsonrpc-core = { version = "10.0", path = "../core" }
susy-jsonrpc-server-utils = { version = "10.0", path = "../server-utils" }
log = "0.4"
net2 = "0.2"
unicase = "2.0"

[badges]
travis-ci = { repository = "susytech/susy-jsonrpc", branch = "master"}
