[package]
authors = ["Susytech <admin@superstring.ch>", "Susytech <admin@susy.io>"]
description = "IPC server for JSON-RPC"
documentation = "https://docs.rs/susy-jsonrpc-ipc-server/"
edition = "2018"
homepage = "https://github.com/susytech/susy-jsonrpc"
license = "MIT"
name = "susy-jsonrpc-ipc-server"
repository = "https://github.com/susytech/susy-jsonrpc"
version = "10.0.1"

[dependencies]
log = "0.4"
tokio-service = "0.1"
susy-jsonrpc-core = { version = "10.0", path = "../core" }
susy-jsonrpc-server-utils = { version = "10.0", path = "../server-utils" }
susy-tokio-ipc = "0.1"
parking_lot = "0.7"

[dev-dependencies]
env_logger = "0.6"
lazy_static = "1.0"

[target.'cfg(not(windows))'.dev-dependencies]
tokio-uds = "0.2"

[badges]
travis-ci = { repository = "susytech/susy-jsonrpc", branch = "master"}
