[package]
authors = ["Susy Technologies <admin@susy.io>"]
description = "Helper macros for susy-jsonrpc-core"
documentation = "https://docs.rs/susy-jsonrpc-macros/"
homepage = "https://github.com/susytech/susy-jsonrpc"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "macros"]
license = "MIT"
name = "susy-jsonrpc-macros"
repository = "https://github.com/susytech/susy-jsonrpc"
version = "10.0.1"

[dependencies]
serde = "1.0"
susy-jsonrpc-core = { version = "10.0", path = "../core" }
susy-jsonrpc-pubsub = { version = "10.0", path = "../pubsub" }

[dev-dependencies]
serde_json = "1.0"
susy-jsonrpc-tcp-server = { version = "10.0", path = "../tcp" }

[badges]
travis-ci = { repository = "susytech/susy-jsonrpc", branch = "master"}
