[package]
authors = ["Susytech <admin@superstring.ch>", "Susytech <admin@susy.io>"]
description = "Helper macros for susy-jsonrpc-core"
documentation = "https://docs.rs/susy-jsonrpc-macros/"
homepage = "https://github.com/susytech/susy-jsonrpc"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "macros"]
license = "MIT"
name = "susy-jsonrpc-macros"
repository = "https://github.com/susytech/susy-jsonrpc"
version = "10.1.0"

[dependencies]
serde = { version="1.0",registry="susytech"}
susy-jsonrpc-core = { version = "10.1", registry="susytech"}
susy-jsonrpc-pubsub = { version = "10.1", registry="susytech"}

[dev-dependencies]
serde_json = { version="1.0", registry="susytech"}
susy-jsonrpc-tcp-server = { version = "10.1", registry="susytech"}

[badges]
travis-ci = { repository = "susytech/susy-jsonrpc", branch = "master"}
