[package]
authors = ["Susy Technologies <admin@susy.io>"]
description = "Publish-Subscribe extension for jsonrpc."
documentation = "https://docs.rs/susy-jsonrpc-pubsub/"
edition = "2018"
homepage = "https://github.com/susytech/susy-jsonrpc"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "macros"]
license = "MIT"
name = "susy-jsonrpc-pubsub"
repository = "https://github.com/susytech/susy-jsonrpc"
version = "10.0.1"

[dependencies]
log = "0.4"
parking_lot = "0.7"
susy-jsonrpc-core = { version = "10.0", path = "../core" }
serde = "1.0"

[dev-dependencies]
susy-jsonrpc-tcp-server = { version = "10.0", path = "../tcp" }

[badges]
travis-ci = { repository = "susytech/susy-jsonrpc", branch = "master"}
