[package]
authors = ["Susytech <admin@superstring.ch>", "Susytech <admin@susy.io>"]
description = "Publish-Subscribe extension for jsonrpc."
documentation = "https://docs.rs/susy-jsonrpc-pubsub/"
edition = "2018"
homepage = "https://github.com/susytech/susy-jsonrpc"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "macros"]
license = "MIT"
name = "susy-jsonrpc-pubsub"
repository = "https://github.com/susytech/susy-jsonrpc"
version = "11.0.0"

[dependencies]
log = {version="0.4", registry="susytech"}
parking_lot = {version="0.7", registry="susytech"}
susy-jsonrpc-core = { version = "11.0", registry="susytech"}
serde = {version="1.0", registry="susytech"}

[dev-dependencies]
susy-jsonrpc-tcp-server = { version = "11.0", registry="susytech"}

[badges]
travis-ci = { repository = "susytech/susy-jsonrpc", branch = "master"}
