[package]
authors = ["Susytech <admin@superstring.ch>", "Susytech <admin@susy.io>"]
description = "Server utils for susy-jsonrpc-core crate."
documentation = "https://docs.rs/susy-jsonrpc-server-utils/"
edition = "2018"
homepage = "https://github.com/susytech/susy-jsonrpc"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]
license = "MIT"
name = "susy-jsonrpc-server-utils"
repository = "https://github.com/susytech/susy-jsonrpc"
version = "10.0.1"

[dependencies]
bytes = {version="0.4",registry="susytech"}
globset = {version="0.4",registry="susytech"}
susy-jsonrpc-core = { version = "10.0",registry="susytech"}
lazy_static = {version="1.1.0",registry="susytech"}
log = {version="0.4",registry="susytech"}
num_cpus = {version="1.8",registry="susytech"}
tokio = { version = "0.1",registry="susytech"}
tokio-codec = { version = "0.1",registry="susytech"}
unicase = {version="2.0",registry="susytech"}

[badges]
travis-ci = { repository = "susytech/susy-jsonrpc", branch = "master"}
