[package]
authors = ["Susy Technologies <admin@susy.io>"]
description = "Server utils for susy-jsonrpc-core crate."
documentation = "https://docs.rs/susy-jsonrpc-server-utils/"
edition = "2018"
homepage = "https://github.com/susytech/susy-jsonrpc"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]
license = "MIT"
name = "susy-jsonrpc-server-utils"
repository = "https://github.com/susytech/susy-jsonrpc"
version = "10.0.1"

[dependencies]
bytes = "0.4"
globset = "0.4"
susy-jsonrpc-core = { version = "10.0", path = "../core" }
lazy_static = "1.1.0"
log = "0.4"
num_cpus = "1.8"
tokio = { version = "0.1" }
tokio-codec = { version = "0.1" }
unicase = "2.0"

[badges]
travis-ci = { repository = "susytech/susy-jsonrpc", branch = "master"}
