[package]
name = "susy-jsonrpc-stdio-server"
description = "STDIN/STDOUT server for JSON-RPC"
version = "0.1.0"
authors = ["cmichi <mich@elmueller.net>"]
license = "MIT"
homepage = "https://github.com/susytech/susy-jsonrpc"
repository = "https://github.com/susytech/susy-jsonrpc"
documentation = "https://susytech.github.io/jsonrpc/susy_jsonrpc_stdio_server/index.html"

[dependencies]
futures = { version = "0.1.23", registry="susytech" }
susy-jsonrpc-core = { version = "9.0", registry="susytech" }
log = { version="0.4", registry="susytech" }
tokio = { version="0.1.7", registry="susytech" }
tokio-codec = { version="0.1.0", registry="susytech" }
tokio-io = { version="0.1.7", registry="susytech" }
tokio-stdin-stdout = { version="0.1.4", registry="susytech" }

[dev-dependencies]
lazy_static = { version="1.0", registry="susytech" }
env_logger = { version="0.5", registry="susytech" }

[badges]
travis-ci = { repository = "susytech/susy-jsonrpc", branch = "master"}
