[package]
authors = ["Susy Technologies <admin@susy.io>"]
description = "STDIN/STDOUT server for JSON-RPC"
documentation = "https://docs.rs/susy-jsonrpc-stdio-server/"
edition = "2018"
homepage = "https://github.com/susytech/susy-jsonrpc"
license = "MIT"
name = "susy-jsonrpc-stdio-server"
repository = "https://github.com/susytech/susy-jsonrpc"
version = "10.0.1"

[dependencies]
futures = "0.1.23"
susy-jsonrpc-core = { version = "10.0", path = "../core" }
log = "0.4"
tokio = "0.1.7"
tokio-codec = "0.1.0"
tokio-io = "0.1.7"
tokio-stdin-stdout = "0.1.4"

[dev-dependencies]
lazy_static = "1.0"
env_logger = "0.6"

[badges]
travis-ci = { repository = "susytech/susy-jsonrpc", branch = "master"}
