[package]
authors = ["Susy Technologies <admin@susy.io>"]
description = "TCP/IP server for JSON-RPC"
documentation = "https://docs.rs/susy-jsonrpc-tcp-server/"
edition = "2018"
homepage = "https://github.com/susytech/susy-jsonrpc"
license = "MIT"
name = "susy-jsonrpc-tcp-server"
repository = "https://github.com/susytech/susy-jsonrpc"
version = "10.0.1"

[dependencies]
log = "0.4"
parking_lot = "0.7"
tokio-service = "0.1"
susy-jsonrpc-core = { version = "10.0", path = "../core" }
susy-jsonrpc-server-utils = { version = "10.0", path = "../server-utils" }

[dev-dependencies]
lazy_static = "1.0"
env_logger = "0.6"

[badges]
travis-ci = { repository = "susytech/susy-jsonrpc", branch = "master"}
