[package]
authors = ["Susytech <admin@superstring.ch>", "Susytech <admin@susy.io>"]
description = "TCP/IP server for JSON-RPC"
documentation = "https://docs.rs/susy-jsonrpc-tcp-server/"
edition = "2018"
homepage = "https://github.com/susytech/susy-jsonrpc"
license = "MIT"
name = "susy-jsonrpc-tcp-server"
repository = "https://github.com/susytech/susy-jsonrpc"
version = "11.0.0"

[dependencies]
log = { version="0.4", registry="susytech"}
parking_lot = { version="0.7", registry="susytech"}
tokio-service = { version="0.1", registry="susytech"}
susy-jsonrpc-core = { version = "11.0", registry="susytech"}
susy-jsonrpc-server-utils = { version = "11.0", registry="susytech"}

[dev-dependencies]
lazy_static = { version="1.0", registry="susytech"}
env_logger = { version="0.6", registry="susytech"}

[badges]
travis-ci = { repository = "susytech/susy-jsonrpc", branch = "master"}
