[package]
name = "susy-jsonrpc-test"
description = "Simple test framework for JSON-RPC."
version = "10.0.1"
authors = ["Tomasz Drwięga <tomasz@susy.io>"]
license = "MIT"
homepage = "https://github.com/susytech/susy-jsonrpc"
repository = "https://github.com/susytech/susy-jsonrpc"
documentation = "https://docs.rs/susy-jsonrpc-test/"
edition = "2018"

[dependencies]
susy-jsonrpc-core = { path = "../core", version = "10.0" }
susy-jsonrpc-pubsub = { path = "../pubsub", version = "10.0" }
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
susy-jsonrpc-derive = { path = "../derive", version = "10.0" }

