[package]
authors = ["Susy Technologies <admin@susy.io>"]
description = "WebSockets server for JSON-RPC"
documentation = "https://docs.rs/susy-jsonrpc-ws-server/"
edition = "2018"
homepage = "https://github.com/susytech/susy-jsonrpc"
license = "MIT"
name = "susy-jsonrpc-ws-server"
repository = "https://github.com/susytech/susy-jsonrpc"
version = "10.0.1"

[dependencies]
error-chain = "0.12"
susy-jsonrpc-core = { version = "10.0", path = "../core" }
susy-jsonrpc-server-utils = { version = "10.0", path = "../server-utils" }
log = "0.4"
parking_lot = "0.7"
slab = "0.4"
susy-ws = "0.8"

[badges]
travis-ci = { repository = "susytech/susy-jsonrpc", branch = "master"}
