[package]
authors = ["Susytech <admin@superstring.ch>", "Susytech <admin@susy.io>"]
description = "WebSockets server for JSON-RPC"
documentation = "https://docs.rs/susy-jsonrpc-ws-server/"
edition = "2018"
homepage = "https://github.com/susytech/susy-jsonrpc"
license = "MIT"
name = "susy-jsonrpc-ws-server"
repository = "https://github.com/susytech/susy-jsonrpc"
version = "11.0.0"

[dependencies]
susy-jsonrpc-core = { version = "11.0", registry="susytech" }
susy-jsonrpc-server-utils = { version = "11.0", registry="susytech" }
log = { version ="0.4",registry="susytech" }
parking_lot = { version ="0.7",registry="susytech" }
slab = { version ="0.4",registry="susytech" }
ws = { version ="0.8",registry="susytech" }

[badges]
travis-ci = { repository = "susytech/susy-jsonrpc", branch = "master"}
