[package]
name = "susy-jsonrpc-pubsub-examples"
description = "Examples of Publish-Subscribe extension for jsonrpc."
homepage = "https://github.com/susytech/susy-jsonrpc"
repository = "https://github.com/susytech/susy-jsonrpc"
version = "8.0.0"
authors = ["tomusdrw <tomasz@superstring.ch>"]
license = "MIT"

[dependencies]
susy-jsonrpc-core = { version = "8.0", path = "../../core" }
susy-jsonrpc-pubsub = { version = "8.0", path = "../" }
susy-jsonrpc-ws-server = { version = "8.0", path = "../../ws" }
susy-jsonrpc-ipc-server = { version = "8.0", path = "../../ipc" }
